Fixed dark mode issues. (#160)
* fixes

* mrms fix

--- a/resources/sass/materialize.scss
+++ b/resources/sass/materialize.scss
@@ -99,8 +99,19 @@ body {
         .tabulator-page {
             color: #fff;
         }
+        .collapsible {
+            border-top: solid 2px rgba(255, 255, 255, 0.2);
+            border-bottom:solid 2px rgba(255, 255, 255, 0.2);
+            border-left: solid 2px rgba(255, 255, 255, 0.2);
+            border-right: solid 2px rgba(255, 255, 255, 0.2);
+        }
+        .collapsible-header {
+            background-color: rgba(25, 25, 25, 255);
+            border-bottom: rgba(255, 255, 255, 0.2);
+        }
         .collapsible-body {
             background-color: rgba(25, 25, 25, 255);
+            border-bottom: rgba(255, 255, 255, 0.2);
         }
         .dropdown-trigger {
             color: #fff;
@@ -133,6 +144,7 @@ body {
         .sidenav {
             background-color: rgba(25, 25, 25, 255);
             li {
+                background-color: rgba(25, 25, 25, 255);
                 a {
                     &:not(.subheader) {
                         color: #fff;
@@ -169,6 +181,30 @@ body {
         }
         .black-text {
             color: #fff !important;
+        }
+        .select-dropdown span {
+            color: #fff !important;
+        }
+        .tabulator-header-filter input{
+            color: #fff;
+        }
+        svg .on-background {
+            fill: #fff;
+        }
+        table tr {
+            border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+        }
+        .card-content input {
+            color: #fff !important;
+        }
+        .tab {
+            background-color: rgba(25, 25, 25, 255);
+        }
+        .tab a {
+            color: $secondary-color !important;
+        }
+        .lever {
+            background-color: #fff !important;
         }
     }
 }
